Modify models User and Offer. Finish SignIn process.
Model User: instead of one column role, user now have wanted_role and real_role
Model Offer: numOfAvailablePlaces will count automatically
SignIn: Add CSRF token and set data validation

--- a/Booking/templates/signIn.html
+++ b/Booking/templates/signIn.html
@@ -8,6 +8,8 @@ Sign In
 <body class="text-center">
     <div class="container">
         <form method="POST" class="form-register" style="color:white">
+            <!-- For security: to stop 'Cross Site Request Forgery'; This line generate CSRF token -->
+            {{ form.hidden_tag() }}
             <h1 class="h3 mb-3 font-weight-normal">
                 Please Create Your Account
             </h1>
@@ -31,8 +33,8 @@ Sign In
             {{ form.password_val.label() }}
             {{ form.password_val(class="form-control", placeholder="Enter your password again...") }}
 
-            {{ form.role.label() }}
-            {{ form.role(class="form-control", placeholder="Wanted role...") }}
+            {{ form.wanted_role.label() }}
+            {{ form.wanted_role(class="form-control", placeholder="Wanted role...") }}
 
             <br>
 
